Внесены измения в файл index. Добавлены каталоги по элементам , внесена разметка в index.html , подключены шрифты. Создан стилевой файл , но без стилий.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
     <title>E-Mentor</title>
 </head>
 <body>
-    <header>
-        <section>
-            
-        </section>
+    <header class="page-header">
+        <!-- включает в себя меню навигации и логотив -->
     </header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <main>
+        <section class="promo">
+            <!-- сюда данные из файла promo -->
+            <!-- декоративные изображения через position -->
+        </section>
+        <section class="statistics">
+            <!-- сюда данные из файла statistics -->
+        </section>
+        <section class="teachers">
+                <!-- сюда данные из файла teachers -->
+                <!-- cropping-bottom-left обрезка по кроям -->
+        </section>
+        <section class="product">
+                <!-- сюда данные из файла product -->
+        </section>
+        <section class="courses">
+                <!-- сюда данные из файла courses -->
+        </section>
+    </main>
+    <aside class="banner">
+        <!-- сюда данные из файла banner -->
+    </aside>
+    <footer class="page-footer">
+        <!-- сюда данные из файла footer -->
+    </footer>
 </body>
 </html>
