Добавленны блоки statistics, teachers, product. Эффекты наведения отсутствуют

--- a/bloks/product.html
+++ b/bloks/product.html
@@ -1,8 +1,32 @@
-<section class="product">
-    <div class="product__img-box">
-        <img class="product__img" src="../img/product/photo.jpg" width="470" height="332" alt="#">
-    </div>
-    <div class="product__description">
-        <!-- тут вставим блок offer/promo -->
-    </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="../css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <section class="product">
+        <div class="product__wrp">
+            <div class="product__img-box">
+                <img class="product__img" src="../img/product/photo.jpg" width="470" height="332" alt="#">
+            </div>
+            <div class="product__description">
+                <!-- тут вставим блок offer/promo -->
+                <div class="offer offer--center ralewayR">
+                    <!-- offer--center для блока promo так как у них схожая структура - ставит текст по центру -->
+                    <h2 class="offer__title offer--color-white ralewayR">Выбирайте свой формат обучения</h2>
+                    <p class="offer__description offer--color-white">Смотрите видео-лекции в удобное для вас время, обучайтесь на тренажере, участвуйте в интенсивных воркшопах с командой или проходите курс с гибким расписанием. На нашей платформе каждый найдет подходящий формат.</p>
+                    <div class="offer__button">
+                        <!-- тут кнопка -->
+                        <div class="promo__button">
+                            <button class="button button--accent ralewayM">Все курсы</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
