--- a/index.html
+++ b/index.html
@@ -90,19 +90,93 @@
             </div>
             <img class="promo__img-left" src="img/promo/left.jpg" alt="#" height="300">
             <img class="promo__img-fight" src="img/promo/right.jpg" alt="#" height="300">
-            <!-- сюда данные из файла promo -->
-            <!-- декоративные изображения через position -->
         </section>
         <section class="statistics">
-            <!-- сюда данные из файла statistics -->
+            <div class="statistics__list ralewayM">
+                <div class="statistics__item">
+                    <span class="statistics__indicator">100+</span>
+                    <span class="statistics__description">теоретических и практических курсов для разного уровня</span>
+                </div>
+                <div class="statistics__item">
+                    <span class="statistics__indicator">3 000</span>
+                    <span class="statistics__description">часов видео-лекций и вебинаров от лучших преподавателей</span>
+                </div>
+                <div class="statistics__item">
+                    <span class="statistics__indicator">15</span>
+                    <span class="statistics__description">направлений обучения востребованным профессиям</span>
+                </div>
+                <div class="statistics__item">
+                    <span class="statistics__indicator">2</span>
+                    <span class="statistics__description">учеников уже занимаются на нашей платформе</span>
+                </div>
+            </div>        
         </section>
         <section class="teachers">
-                <!-- сюда данные из файла teachers -->
-                <!-- cropping-bottom-left обрезка по кроям -->
-        </section>
-        <section class="product">
-                <!-- сюда данные из файла product -->
-        </section>
+            <div class="teachers__wrp">
+                <div class="teachers__description">
+                    <div class="offer offer--center ralewayR">
+                        <!-- offer--center для блока promo так как у них схожая структура - ставит текст по центру -->
+                        <h2 class="offer__title ralewayM">Учитесь у лучших</h2>
+                        <p class="offer__description">Наши преподаватели – профессионалы, которые добились успеха в своей области. Лид-дизайнеры известных студий, маркетологи крупнейших компаний, редакторы популярных медиа: получайте опыт из первых рук, в любое время.</p>
+                        <p class="offer__description">Кураторы курсов – наши лучшие выпускники, будут помогать и поддерживать вас на протяжении всего обучения.</p>
+                        <div class="offer__button">
+                            <!-- тут кнопка -->
+                            <div class="promo__button">
+                                <button class="button ralewayM">Все преподаватели</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- тут блок offer -->
+                </div>
+                <div class="teachers__img-box ralewayR">
+                   <figure class="teachers__cart">
+                       <img class="teachers__img cropping-bottom-left" src="img/teachers/1.jpg" width="170" height="170" alt="#">
+                       <figcaption class="teachers__caption">Катя, ведущий дизайнер TailGroup</figcaption>
+                   </figure>
+                   <figure class="teachers__cart">
+                       <img class="teachers__img cropping-top-left cropping-bottom-right" src="img/teachers/2.jpg" width="170" height="170" alt="#">
+                       <figcaption class="teachers__caption">Марина, маркетолог Headers Market</figcaption>
+                   </figure>
+                   <figure class="teachers__cart">
+                       <img class="teachers__img cropping-bottom-right" src="img/teachers/3.jpg" width="170" height="170" alt="#">
+                       <figcaption class="teachers__caption">Сава, PR-менеджер Central Media</figcaption>
+                   </figure>
+                   <figure class="teachers__cart">
+                       <img class="teachers__img cropping-top-left" src="img/teachers/4.jpg" width="170" height="170" alt="#">
+                       <figcaption class="teachers__caption">Паша, основатель LeadCompany</figcaption>
+                   </figure>
+                   <figure class="teachers__cart">
+                       <img class="teachers__img cropping-bottom-right cropping-top-left" src="img/teachers/5.jpg" width="170" height="170" alt="#">
+                       <figcaption class="teachers__caption">Саша, главный редактор Just Journal</figcaption>
+                   </figure>
+                   <figure class="teachers__cart">
+                       <img class="teachers__img cropping-top-right" src="img/teachers/6.jpg" width="170" height="170" alt="#">
+                       <figcaption class="teachers__caption">Лёня, ведущий разработчик Ymail</figcaption>
+                   </figure>
+                </div>    
+            </div>   
+       </section>
+       <section class="product">
+        <div class="product__wrp">
+            <div class="product__img-box">
+                <img class="product__img" src="img/product/photo.jpg" width="470" height="332" alt="#">
+            </div>
+            <div class="product__description">
+                <!-- тут вставим блок offer/promo -->
+                <div class="offer offer--center ralewayR">
+                    <!-- offer--center для блока promo так как у них схожая структура - ставит текст по центру -->
+                    <h2 class="offer__title offer--color-white ralewayR">Выбирайте свой формат обучения</h2>
+                    <p class="offer__description offer--color-white">Смотрите видео-лекции в удобное для вас время, обучайтесь на тренажере, участвуйте в интенсивных воркшопах с командой или проходите курс с гибким расписанием. На нашей платформе каждый найдет подходящий формат.</p>
+                    <div class="offer__button">
+                        <!-- тут кнопка -->
+                        <div class="promo__button">
+                            <button class="button button--accent ralewayM">Все курсы</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
         <section class="courses">
                 <!-- сюда данные из файла courses -->
         </section>
